--- a/style.css
+++ b/style.css
@@ -1,4 +1,83 @@
-h1 {
-  color: green;
-  font-size: 20px;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: rgb(248, 244, 244);
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 1140px;
+  margin: auto;
+}
+.main-heading {
+  text-align: center;
+}
+
+h2 {
+  position: relative;
+}
+
+h2::after {
+  content: "";
+  background-color: #000;
+  border-radius: 10px;
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  height: 4px;
+  width: 80px;
+}
+
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: start;
+  list-style-type: none;
+  padding: 0;
+}
+
+ul li {
+  margin: 20px;
+  width: 320px;
+}
+
+ul li a {
+  color: #504f4f;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+ul li a img {
+  height: 200px;
+  object-fit: cover;
+  width: 100%;
+  transition: transform 0.3s ease;
+  margin-bottom: 2px;
+}
+
+ul li a:hover img {
+  transform: scale(1.05);
+}
+
+footer {
+  background-color: #222;
+  color: rgb(230, 227, 227);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  font-size: 16px;
+}
+
+footer a {
+  color: #fff;
 }
